--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pivot",
   "version": "1.0.0",
   "description": "",
-  "main": "server/main.js",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,9 +18,17 @@
     "browser-sync": "^2.10.1",
     "express": "^4.13.3",
     "gulp": "^3.9.0",
+    "gulp-compass": "^2.1.0",
+    "gulp-minify-css": "^1.2.0",
+    "gulp-concat": "^2.5.2",
+    "gulp-ng-annotate": "^0.5.2",
+    "gulp-sourcemaps": "^1.5.0",
+    "gulp-uglify": "^1.1.0",
+    "gulp-ruby-sass": "^1.3.0",
     "tingodb": "^0.4.2"
   },
   "devDependencies": {
-    "body-parser": "^1.14.2"
+    "body-parser": "^1.14.2",
+    "browser-sync": "^2.8.2"
   }
 }
