--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "pivot",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "server/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "NODE_PATH=./server node server/main.js",
+    "test": ""
   },
   "repository": {
     "type": "git",
@@ -19,13 +20,15 @@
     "express": "^4.13.3",
     "gulp": "^3.9.0",
     "gulp-compass": "^2.1.0",
-    "gulp-minify-css": "^1.2.0",
     "gulp-concat": "^2.5.2",
+    "gulp-minify-css": "^1.2.0",
     "gulp-ng-annotate": "^0.5.2",
+    "gulp-ruby-sass": "^1.3.0",
     "gulp-sourcemaps": "^1.5.0",
     "gulp-uglify": "^1.1.0",
-    "gulp-ruby-sass": "^1.3.0",
-    "tingodb": "^0.4.2"
+    "mongoose": "^3.8.30",
+    "tingodb": "^0.4.2",
+    "tungus": "0.0.5"
   },
   "devDependencies": {
     "body-parser": "^1.14.2",
