--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-sourcemaps": "^1.5.0",
     "gulp-uglify": "^1.1.0",
     "mongoose": "^3.8.30",
+    "socket.io": "^1.3.7",
     "tingodb": "^0.4.2",
     "tungus": "0.0.5"
   },
