--- a/package.json
+++ b/package.json
@@ -1,38 +1,45 @@
 {
-  "name": "pivot",
+  "name": "generator-yx",
   "version": "1.0.0",
   "description": "",
   "main": "server/main.js",
+  "dependencies": {
+    "body-parser": "^1.14.2",
+    "bower": "^1.7.1",
+    "browser-sync": "^2.10.1",
+    "express": "^4.13.3",
+    "gulp-concat": "^2.6.0",
+    "gulp-compass": "^2.1.0",
+    "gulp-ng-annotate": "^0.5.3",
+    "gulp-minify-css": "^1.2.2",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp": "^3.9.0",
+    "mongoose": "^3.8.30",
+    "gulp-ruby-sass": "^1.4.0",
+    "gulp-uglify": "^1.5.1",
+    "tungus": "^0.0.5",
+    "tingodb": "^0.4.2",
+    "socket.io": "^1.3.7"
+  },
+  "devDependencies": {
+    "body-parser": "^1.14.2",
+    "browser-sync": "^2.8.2"
+  },
   "scripts": {
     "start": "NODE_PATH=./server node server/main.js",
     "test": ""
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@bitbucket.org/fredfarid/ff-sh-pivot.git"
+    "url": "git+https://github.com/huyaxiong/generator-yx.git"
   },
-  "author": "Hugh",
+  "keywords": [
+    "yeoman-generator"
+  ],
+  "author": "yx",
   "license": "ISC",
-  "homepage": "https://bitbucket.org/fredfarid/ff-sh-pivot#readme",
-  "dependencies": {
-    "bower": "^1.7.1",
-    "browser-sync": "^2.10.1",
-    "express": "^4.13.3",
-    "gulp": "^3.9.0",
-    "gulp-compass": "^2.1.0",
-    "gulp-concat": "^2.5.2",
-    "gulp-minify-css": "^1.2.0",
-    "gulp-ng-annotate": "^0.5.2",
-    "gulp-ruby-sass": "^1.3.0",
-    "gulp-sourcemaps": "^1.5.0",
-    "gulp-uglify": "^1.1.0",
-    "mongoose": "^3.8.30",
-    "socket.io": "^1.3.7",
-    "tingodb": "^0.4.2",
-    "tungus": "0.0.5"
+  "bugs": {
+    "url": "https://github.com/huyaxiong/generator-yx/issues"
   },
-  "devDependencies": {
-    "body-parser": "^1.14.2",
-    "browser-sync": "^2.8.2"
-  }
+  "homepage": "https://github.com/huyaxiong/generator-yx#readme"
 }
