--- a/app/templates/package.json
+++ b/app/templates/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "generator-yx",
+  "name": "yx",
   "version": "1.0.0",
   "description": "foundation+compass+susy+node+mongoose+socket.io+gulp",
   "main": "server/main.js",
