--- a/app/templates/package.json
+++ b/app/templates/package.json
@@ -4,22 +4,22 @@
   "description": "foundation+compass+susy+node+mongoose+socket.io+gulp",
   "main": "server/main.js",
   "dependencies": {
-    "body-parser": "^1.14.2",
-    "bower": "^1.7.1",
-    "browser-sync": "^2.10.1",
-    "express": "^4.13.3",
-    "gulp": "^3.9.0",
-    "gulp-compass": "^2.1.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-minify-css": "^1.2.2",
-    "gulp-ng-annotate": "^0.5.3",
-    "gulp-ruby-sass": "^1.4.0",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^1.5.1",
-    "mongoose": "^3.8.30",
-    "socket.io": "^1.3.7",
-    "tingodb": "^0.4.2",
-    "tungus": "^0.0.5",
+    "body-parser": "1.14.2",
+    "bower": "1.7.1",
+    "browser-sync": "2.10.1",
+    "express": "4.13.3",
+    "gulp": "3.9.0",
+    "gulp-compass": "2.1.0",
+    "gulp-concat": "2.6.0",
+    "gulp-minify-css": "1.2.2",
+    "gulp-ng-annotate": "0.5.3",
+    "gulp-ruby-sass": "1.4.0",
+    "gulp-sourcemaps": "1.6.0",
+    "gulp-uglify": "1.5.1",
+    "mongoose": "3.8.30",
+    "socket.io": "1.3.7",
+    "tingodb": "0.4.2",
+    "tungus": "0.0.5",
     "yeoman-generator": "^0.22.1"
   },
   "devDependencies": {
