--- a/app/templates/client/bower.json
+++ b/app/templates/client/bower.json
@@ -16,6 +16,7 @@
     "PreloadJS": "~0.6.2",
     "EaselJS": "~0.8.2",
     "SoundJS": "~0.6.2",
-    "TweenJS": "~0.6.2"
+    "TweenJS": "~0.6.2",
+    "lodash": "~3.10.1"
   }
 }
