--- a/app/templates/package.json
+++ b/app/templates/package.json
@@ -1,28 +1,26 @@
 {
   "name": "yx",
   "version": "1.0.0",
-  "description": "foundation+compass+susy+node+mongoose+socket.io+gulp",
+  "description": "front & backend skeleton",
   "main": "server/main.js",
   "dependencies": {
-    "body-parser": "1.14.2",
-    "bower": "1.7.1",
-    "browser-sync": "2.10.1",
     "express": "4.13.3",
-    "gulp": "3.9.0",
-    "gulp-compass": "2.1.0",
-    "gulp-concat": "2.6.0",
-    "gulp-minify-css": "1.2.2",
-    "gulp-ng-annotate": "0.5.3",
-    "gulp-ruby-sass": "1.4.0",
-    "gulp-sourcemaps": "1.6.0",
-    "gulp-uglify": "1.5.1",
+    "body-parser": "1.14.2",
     "mongoose": "3.8.30",
     "socket.io": "1.3.7",
     "tingodb": "0.4.2",
-    "tungus": "0.0.5",
-    "yeoman-generator": "^0.22.1"
+    "tungus": "0.0.5"
   },
   "devDependencies": {
+    "bower": "1.7.1",
+    "gulp": "^3.8.11",
+    "gulp-compass": "^2.1.0",
+    "gulp-minify-css": "^1.2.0",
+    "gulp-concat": "^2.5.2",
+    "gulp-sourcemaps": "^1.5.0",
+    "gulp-uglify": "^1.1.0",
+    "gulp-ruby-sass": "^1.3.0",
+    "browser-sync": "^2.8.2"
   },
   "scripts": {
     "start": "NODE_PATH=./server node server/main.js",
@@ -39,7 +37,7 @@
     "client",
     "server"
   ],
-  "author": "yx",
+  "author": "huyaxiong",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/huyaxiong/generator-yx/issues"
