--- a/app/templates/package.json
+++ b/app/templates/package.json
@@ -12,10 +12,9 @@
     "tungus": "0.0.5"
   },
   "devDependencies": {
-    "bower": "1.7.1",
+    "bower": "^1.7.1",
     "gulp": "^3.8.11",
     "gulp-compass": "^2.1.0",
-    "gulp-minify-css": "^1.2.0",
     "gulp-concat": "^2.5.2",
     "gulp-sourcemaps": "^1.5.0",
     "gulp-uglify": "^1.1.0",
