--- a/app/templates/package.json
+++ b/app/templates/package.json
@@ -1,32 +1,33 @@
 {
-  "name": "generator-hyx",
-  "version": "1.1.3",
-  "description": "front skeleton",
+  "name": "generator-y",
+  "version": "1.0.0",
+  "description": "front & backend skeleton",
   "main": "app/index.js",
   "dependencies": {
     "lodash": "^4.0.0",
     "yeoman-generator": "^0.22.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+
+  },
   "scripts": {
-    "start": "yo hyx",
+    "start": "yo y",
     "test": ""
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/huyaxiong/generator-hyx.git"
+    "url": "git+https://github.com/huyaxiong/generator-y.git"
   },
   "keywords": [
     "yeoman-generator"
   ],
   "files": [
-    "app",
-    "module"
+    "app"
   ],
   "author": "huyaxiong",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/huyaxiong/generator-hyx/issues"
+    "url": "https://github.com/huyaxiong/generator-y/issues"
   },
-  "homepage": "https://github.com/huyaxiong/generator-hyx#readme"
+  "homepage": "https://github.com/huyaxiong/generator-y#readme"
 }
