--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-yx",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "front and backend skeleton, include foundation, angular, express, mongoose, gulp and ..",
   "main": "app/index.js",
   "dependencies": {
@@ -11,7 +11,7 @@
 
   },
   "scripts": {
-    "start": "yo y",
+    "start": "yo yx",
     "test": ""
   },
   "repository": {
