--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "generator-yx",
-  "version": "1.3.0",
-  "description": "front and backend skeleton, include foundation, angular, express, mongoose, gulp and ..",
+  "version": "1.3.1",
+  "description": "front and backend skeleton, include foundation, angular, gulp, express, mongoose ..",
   "main": "app/index.js",
   "dependencies": {
     "lodash": "^4.0.0",
