--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "generator-yx",
-  "version": "1.3.4",
-  "description": "front and backend skeleton, include foundation, angular, express, babel, gulp ..",
+  "version": "1.3.5",
+  "description": "front & backend skeleton, include foundation, susy, autoprefixer, angular, express, babel, gulp ..",
   "main": "app/index.js",
   "dependencies": {
     "lodash": "^4.0.0",
