--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "generator-yx",
   "version": "1.3.11",
-  "description": "front & backend skeleton, include foundation, susy, autoprefixer, angular, hammer, express, babel, gulp ..",
+  "description": "front & backend skeleton, include angular#1.4.9, babel, autoprefixer, gulp, express..",
   "main": "app/index.js",
   "dependencies": {
     "lodash": "^4.0.0",
