--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "generator-yx",
-  "version": "1.3.11",
-  "description": "front & backend skeleton, include angular#1.4.9, babel, autoprefixer, gulp, express..",
+  "version": "1.3.12",
+  "description": "front & backend skeleton, angular#1.4.9 toolkit, includes babel, autoprefixer, gulp, express..",
   "main": "app/index.js",
   "dependencies": {
     "lodash": "^4.0.0",
