--- a/app/templates/.babelrc
+++ b/app/templates/.babelrc
@@ -4,6 +4,13 @@
   ],
   "plugins": [
     "transform-runtime",
-    "transform-object-rest-spread"
+    "transform-object-rest-spread",
+    [
+      "babel-plugin-root-import",
+      {
+        "rootPathSuffix": "./src/",
+        "rootPathPrefix": "~"
+      }
+    ]
   ]
 }
