--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-yx",
-  "version": "2.0.2",
+  "version": "2.0.3",
   "description": "Full stack javascript project scaffold.",
   "main": "app/index.js",
   "dependencies": {
@@ -25,8 +25,8 @@
     "gulp",
     "mini-program",
     "vue",
-    "vue-c",
-    "vue-m"
+    "vue:c",
+    "vue:m"
   ],
   "author": "huyaxiong",
   "license": "ISC",
