--- a/package.json
+++ b/package.json
@@ -4,10 +4,18 @@
   "description": "Full stack javascript project scaffold.",
   "main": "app/index.js",
   "dependencies": {
+    "eslint": "^5.5.0",
     "lodash": "^4.0.0",
     "yeoman-generator": "^3.1.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-vue": "^4.7.1"
+  },
   "scripts": {
     "start": "yo yx",
     "test": ""
