--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,3 @@
 {
-  "extends": ["plugin:vue/recommended", "standard"]
+  "extends": ["plugin:vue/recommended", "standard", "plugin:jest/recommended"]
 }
