--- a/app/templates/.eslintrc
+++ b/app/templates/.eslintrc
@@ -1,6 +1,3 @@
 {
-  "extends": ["standard", "plugin:jest/recommended"],
-  "rules":{
-    "quote-props":["warn", "as-needed"]
-  }
+  "extends": ["plugin:vue/recommended", "standard", "plugin:jest/recommended"]
 }
