--- a/app/templates/.babelrc
+++ b/app/templates/.babelrc
@@ -1,10 +1,15 @@
 {
   "presets": [
-    "env"
+    "@babel/preset-env"
   ],
   "plugins": [
-    "transform-runtime",
-    "transform-object-rest-spread",
+    [
+      "@babel/plugin-transform-runtime",
+      {
+        "corejs": 2
+      }
+    ],
+    "@babel/plugin-proposal-object-rest-spread",
     [
       "babel-plugin-root-import",
       {
